Separate out bad mime type and unknown mime type errors into separate boxes by MIME type. Explain exactly why these downloads failed and what you can do about that.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1202,6 +1202,7 @@ SaltedHashFreenetStore.cleanerAlertTitle=Datastore maintenance running
 QueueToadlet.awaitingCompression=Waiting
 QueueToadlet.awaitingPasswordTitleDownloads=Password required to access the download queue
 QueueToadlet.awaitingPasswordTitleUploads=Password required to access the upload queue
+QueueToadlet.badMIMETypeIntro=The following downloads are of type ${type}. Freenet does not have any built in support for making this type safe, and we know that it can contain many dangerous things that can compromise your anonymity. If you are sure you want to download these files anyway, uncheck the "Filter data" box and click Restart on each download.
 QueueToadlet.backToUploadsPage=Back to the uploads page
 QueueToadlet.backToDownloadsPage=Back to the downloads page
 QueueToadlet.bulkDownloadSelectOptionDisk=to disk
@@ -1247,6 +1248,8 @@ QueueToadlet.errorNoFileSelectedU=You did not select a file to upload.
 QueueToadlet.errorNoKey=No key specified to download
 QueueToadlet.errorNoKeyToD=You did not specify a key to download.
 QueueToadlet.failedD=Failed downloads (${size})
+QueueToadlet.failedDUnknownMIME=Failed downloads: unknown type ${type} (${size})
+QueueToadlet.failedDBadMIME=Failed downloads: known dangerous type ${type} (${size})
 QueueToadlet.failedDU=Failed directory uploads (${size})
 QueueToadlet.failedToRemove=Failed to remove ${id}: ${message}
 QueueToadlet.failedToRemoveId=Failed to remove: ${id}
@@ -1276,6 +1279,7 @@ QueueToadlet.lastActivity=Last Activity
 QueueToadlet.lastActivity.unknown=unknown
 QueueToadlet.lastActivity.ago=${time} ago
 QueueToadlet.legend=Legend
+QueueToadlet.mimeProblemFetchAnyway=You can ask Freenet to fetch the file anyway by unchecking the "Filter data" checkbox and clicking on Restart.
 QueueToadlet.mimeType=MIME Type
 QueueToadlet.noTaskOnGlobalQueue=There is no task queued on the global queue at the moment.
 QueueToadlet.none=none
@@ -1698,7 +1702,7 @@ TranslationToadlet.translationUpdatedTitle=Translation updated!
 TranslationToadlet.updateTranslationCommand=Update the translation!
 UndetectableCharsetException.title=Could not detect charset, looks like ${charset} but isn't
 UndetectableCharsetException.explanation=Detected first few bytes of charset declaration but is invalid, ignoring the style sheet as per CSS 2.1 section 4.4.
-UnknownContentTypeException.explanation=Your Freenet node does not know anything about this MIME type. This means that your browser might do something dangerous in response to downloading this file. For example, many formats can contain embedded images or videos, which are downloaded from the web; this is by no means innocuous, because they can ruin your anonymity and expose your IP address (if the attacker runs the web site or has access to its logs). Hyperlinks to the Web can also be a threat, for much the same reason, as can scripting, for this and other reasons.
+UnknownContentTypeException.explanation=Your Freenet node does not know anything about the type ${type}. This means that your browser might do something dangerous in response to downloading this file. For example, many formats can contain embedded images or videos, which are downloaded from the web; this is by no means innocuous, because they can ruin your anonymity and expose your IP address (if the attacker runs the web site or has access to its logs). Hyperlinks to the Web can also be a threat, for much the same reason, as can scripting, for this and other reasons.
 UnknownContentTypeException.title=Unknown and potentially dangerous content type: ${type}
 UnsupportedCharsetInFilterException.title=Unsupported text character set: ${charset}.
 UnsupportedCharsetInFilterException.explanation=This is a very rare character set, not supported by Java, and it is quite likely that this is an attempt to bypass the content filter, or just corrupt data.
