--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -670,6 +670,12 @@ HTMLFilter.tooManyNestedStyleOrScriptTags=Too many nested style or script tags -
 HTMLFilter.tooManyNestedStyleOrScriptTagsLong=Too many nested </style> tags - ambiguous or invalid parsing, can't reliably filter so removing the inner tags - garbage may appear in browser
 HTMLFilter.unknownTag=unknown tag ${tag}
 HTMLFilter.wrongCharsetInMeta=A meta tag indicates the wrong charset
+InsertContext.CompatibilityMode.COMPAT_CURRENT=Current (latest, most efficient)
+InsertContext.CompatibilityMode.COMPAT_UNKNOWN=Unknown
+InsertContext.CompatibilityMode.COMPAT_1250_EXACT=Pre-1250 (exact)
+InsertContext.CompatibilityMode.COMPAT_1250=Pre-1250 (with even splitting)
+InsertContext.CompatibilityMode.COMPAT_1251=1251
+InsertContext.CompatibilityMode.COMPAT_1255=1255
 InsertFreesiteToadlet.title=Upload a freesite
 InsertFreesiteToadlet.content1=You can anonymously upload a web site to Freenet ("insert a Freesite"). Once it has been uploaded, it will remain on Freenet for as long as people continue to access it occasionally. It is distributed across the network and therefore also available if your computer is turned off. And the most important fact: If the security level of Freenet has been configured properly it should be very difficult to find out who has uploaded a Freesite.
 InsertFreesiteToadlet.content2=Unfortunately we do not yet have a built-in wizard for inserting freesites. We suggest you use jSite, this is a GUI tool for inserting freesites. You can get the latest version of jSite ${jsite-http}from our web site${/link}, or you can get version ${jsite-freenet-version} ${jsite-freenet}from Freenet${/link} (${jsite-info}more information${/link}).
