--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -200,6 +200,8 @@ ContentFilter.applicationPdfReadAdvice=Adobe(R) PDF document - VERY DANGEROUS!
 ContentFilter.applicationPdfWriteAdvice=Adobe(R) PDF document - VERY DANGEROUS!
 ContentFilter.EOFMessage=Unexpected end of file
 ContentFilter.EOFDescription=The filter needed more data from the file you were accessing than was available. The file may be malformed or corrupted.
+ContentFilter.containerOggReadAdvice=Ogg container - probably not dangerous, depending on the codec, but can contain links to nonanonymous sites
+ContentFilter.containerOggWriteAdvice=Ogg container - probably not dangerous, depending on the codec, but can often include the name and version of the encoder used
 ContentFilter.imageBMPReadAdvice=BMP image - probably not dangerous
 ContentFilter.imageBMPWriteAdvice=BMP image - probably not dangerous
 ContentFilter.imageGifReadAdvice=GIF image - probably not dangerous
@@ -1046,6 +1048,10 @@ NodeUpdateManager.updateURILong=Where should your Freenet node look for updates?
 NotEnoughNiceLevelsUserAlert.title=Not enough Nice levels available!
 NotEnoughNiceLevelsUserAlert.short=Not enough Nice levels available! Please run Freenet at a lower nice level.
 NotEnoughNiceLevelsUserAlert.content=Your node has detected that it is running at a high nice level. It can't perform well if they aren't enough levels available. Please lower the nice level you're node is running at (Look for PRIORITY in the run.sh file and lower its value)! Currently your node has ${available} levels to play with whereas it would need ${required}.
+OggBitstreamFilter.MalformedTitle=Malformed Ogg Bitstream
+OggBitstreamFilter.MalformedMessage=The Ogg bitstream is not correctly formatted, and could not be properly validated.
+OggPage.ValidSubpageTitle=Ogg Page has Valid Subpage 
+OggPage.ValidSubpageMessage=An element in the Ogg bitstream was found to contain another valid element. This is not a feature of any currently supported bitstream formats. It is likely the bitstream has been maliciously altered in an attempt to bypass the content filter. If this is the case, this file is dangerous, and should not be opened.
 OpennetConnectionsToadlet.successTimeTitle=Last success
 OpennetConnectionsToadlet.successTime=Last time there was a successful CHK fetch from the node
 OpennetConnectionsToadlet.fullTitle=${counts} Strangers (Untrusted Peers) of ${name}
