Throw exception when vorbis structure invalid

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1746,6 +1746,8 @@ UserAlertManager.totalLabel=Total:
 UserAlertManager.warningCountLabel=Warnings:
 UserAlertsToadlet.titleWithName=Status messages for ${name}
 UserAlertsToadlet.noMessages=No messages
+VorbisBitstreamFilter.MalformedTitle=Malformed Vorbis Bitstream
+VorbisBitstreamFilter.MalformedMessage=The Vorbis bitstream is not correctly formatted, and could not be properly validated.
 WelcomeToadlet.activityTitle=Current Activity
 WelcomeToadlet.arkFetchCount=ARK Fetchers: ${total}
 WelcomeToadlet.alertsSummary=Status messages summary (click for details or to change something)
