French translation update for 1259

--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -726,6 +726,12 @@ IPUndetectedUserAlert.unknownAddress=Freenet n'a pas réussi à déterminer votr
 IPUndetectedUserAlert.unknownAddressShort=Freenet n'arrive pas à connaître votre adresse IP. Vous risquez d'avoir des problèmes de connexion.
 IPUndetectedUserAlert.unknownAddressTitle=Adresse externe inconnue
 IPUndetectedUserAlert.unknownAddressWithConfigLink=Freenet n'a pas réussi à déterminer votre adresse IP externe (ou l'adresse IP de votre routeur NAT ou firewall). Vous pouvez quand même échanger des références avec d'autres gens, mais cela ne marchera que si ces gens ne sont pas derrière un NAT ou un firewall. Dès que vous vous serez connecté à une personne, Freenet sera en mesure de déterminer votre adresse IP externe. Vous pouvez déterminer vous-même votre adresse IP et renseigner le ${link}paramètre de configuration${/link} "Adresse IP du moment".
+InsertContext.CompatibilityMode.COMPAT_1250=Pré-1250 (avec le même fractionnement)
+InsertContext.CompatibilityMode.COMPAT_1250_EXACT=Pré-1250 (exacte)
+InsertContext.CompatibilityMode.COMPAT_1251=1251
+InsertContext.CompatibilityMode.COMPAT_1255=1255
+InsertContext.CompatibilityMode.COMPAT_CURRENT=Courante (la plus récente & efficace)
+InsertContext.CompatibilityMode.COMPAT_UNKNOWN=Inconnu
 InsertException.longError.1=L'appelant a fourni une URI inutilisable "
 InsertException.longError.10=Annulé par l'utilisateur
 InsertException.longError.11=Chaîne en trop (surement un  '/') utilisée dans l'URI
@@ -1232,6 +1238,7 @@ QueueToadlet.awaitingPasswordTitleDownloads=Mot de passe requis pour accéder à
 QueueToadlet.awaitingPasswordTitleUploads=Mot de passe requis pour accéder à la liste des insertions
 QueueToadlet.backToDownloadsPage=Retourner à la page des téléchargements
 QueueToadlet.backToUploadsPage=Retourner à la page des insertions
+QueueToadlet.badMIMETypeIntro=Les téléchargements suivants sont de type ${type}. Aucune version de Freenet n'existe pour rendre ce type sûr, et nous savons qu'il peut contenir de nombreuses choses dangereuses qui peuvent compromettre votre anonymat. Si vous êtes sûr de ce que vous faîtes, et que vous voulez quand même télécharger ces fichiers, décochez le filtre de données et cliquez sur "Redémarrer" pour chaque téléchargement.
 QueueToadlet.bulkDownloadSelectOptionDirect=dans l'espace temporaire
 QueueToadlet.bulkDownloadSelectOptionDisk=sur le disque
 QueueToadlet.change=Changer
@@ -1277,7 +1284,9 @@ QueueToadlet.errorNoFileSelectedU=Vous n'avez pas sélectionné de fichier à in
 QueueToadlet.errorNoKey=Vous n'avez pas spécifié la clé à télécharger
 QueueToadlet.errorNoKeyToD=Vous n'avez pas indiqué de clé à télécharger.
 QueueToadlet.failedD=Téléchargement échoués (${size})
+QueueToadlet.failedDBadMIME=Téléchargements échoués : type de données connu pour être dangereux, ${type} (${size})
 QueueToadlet.failedDU=Insertions de dossiers échouées (${size})
+QueueToadlet.failedDUnknownMIME=Téléchargements échoués : type inconnu ${type} (${size})
 QueueToadlet.failedToRemove=Impossible de supprimer: ${id} : ${message}
 QueueToadlet.failedToRemoveAll=Echec lors de la suppression de toutes les requêtes. Tentez de les supprimer manuellement, ou arrêtez la node et supprimez le fichier de base de données clients (node.db4o) manuellement.
 QueueToadlet.failedToRemoveId=Supression échouée: ${id}
@@ -1304,6 +1313,7 @@ QueueToadlet.insertFileResetForm=Remettre à zéro
 QueueToadlet.key=Clé
 QueueToadlet.lastActivity=Dernière activité
 QueueToadlet.legend=Légende
+QueueToadlet.mimeProblemFetchAnyway=Vous pouvez demander à Freenet de retélécharger le fichier, en décochant le filtre de données et en cliquant sur "Redémarrer".
 QueueToadlet.mimeType=Type MIME
 QueueToadlet.noTaskOnGlobalQueue=Il n'y a aucune tâche en attente dans la file d'attente globale.
 QueueToadlet.none=néant
@@ -1599,6 +1609,7 @@ StatisticsToadlet.insertOutput=Traffic d'insertion (traffic utile): CHK ${chk} S
 StatisticsToadlet.javaVersion=Version de Java : ${version}
 StatisticsToadlet.jobType=Type du travail
 StatisticsToadlet.jvmInfoTitle=Informations sur la JVM
+StatisticsToadlet.jvmName=Nom de la JVN: ${name}
 StatisticsToadlet.jvmVendor=Distributeur de la JVM : ${vendor}
 StatisticsToadlet.jvmVersion=Version de la JVM : ${version}
 StatisticsToadlet.keys=Clés
