Minor fixes to the Swedish translation.

--- a/src/freenet/l10n/freenet.l10n.se.properties
+++ b/src/freenet/l10n/freenet.l10n.se.properties
@@ -117,7 +117,7 @@ ConnectionsToadlet.nodeStatus.CLOCK PROBLEM=KLOCK PROBLEM
 ConnectionsToadlet.nodeStatus.CONNECTED=ANSLUTEN
 ConnectionsToadlet.nodeStatus.CONNECTION ERROR=ANSLUTNINGS FEL
 ConnectionsToadlet.nodeStatus.DISABLED=AVSTÄNGD
-ConnectionsToadlet.nodeStatus.DISCONNECTED=IFRÅNKOPPLAD
+ConnectionsToadlet.nodeStatus.DISCONNECTED=FRÅNKOPPLAD
 ConnectionsToadlet.nodeStatus.DISCONNECTING=KOPPLAR NER
 ConnectionsToadlet.nodeStatus.LISTEN ONLY=ENDAST LYSSNA
 ConnectionsToadlet.nodeStatus.LISTENING=LYSSNAR
@@ -337,7 +337,7 @@ FProxyToadlet.uploadFileWizard=Ladda upp en fil till Freenet
 FProxyToadlet.uploadFileWizardTitle=Ladda upp en fil
 FProxyToadlet.uploads=Filer som laddas upp till Freenet
 FProxyToadlet.uploadsTitle=Uppladdningar
-FProxyToadlet.welcome=Surfa på och sök efter Freesajter, hemsidor upplagda anonymt på Freenet
+FProxyToadlet.welcome=Surfa på och sök efter Freesiter, hemsidor upplagda anonymt på Freenet
 FProxyToadlet.welcomeTitle=Surfa på Freenet
 FcpServer.allowedHosts=Tillåtna värddatorer (läs varningen!)
 FcpServer.allowedHostsFullAccess=Värdar med full tillgång till FCP
