Fix bug #3159: Show a different warning if Library is in the process of being loaded than if it is not loaded at all.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1805,6 +1805,7 @@ WelcomeToadlet.restartingTitle=The Freenet node is being restarted.
 WelcomeToadlet.searchBoxLabel=Search Freenet
 WelcomeToadlet.searchBoxWarningSlow=Searching can be slow at the moment, so this will open a new window for the search, you should have a look at the index sites below while you wait for the search to complete.
 WelcomeToadlet.searchPluginNotLoaded=The plugin needed to search Freenet is not loaded. Please load Library on ${link}the Plugins page${/link}.
+WelcomeToadlet.searchPluginLoading=The plugin needed to search Freenet is not yet loaded, probably because it is being updated. Please reload the page a few times, or go to ${link}the Plugins page${/link} to see the current progress.
 WelcomeToadlet.searchFreenet=Search Freenet!
 WelcomeToadlet.shutdown=Shutdown
 WelcomeToadlet.shutdownConfirm=Are you sure you wish to shut down your Freenet node?
