If FEC decoding produces a data block that doesn't encode to the key expected, fail the download, it was probably inserted corrupt.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -588,6 +588,7 @@ FetchException.longError.31=The content filter tried to make the data safe but f
 FetchException.longError.32=The data is of an unknown type which might be dangerous
 FetchException.longError.33=The data is of a type known to be dangerous, so the content filter has stopped the request
 FetchException.longError.34=The hashes in the metadata do not match the actual data. The data may have been corrupted during download, or it may have been broken when it was inserted for example if the node inserting was broken or the data changed on disk mid-insert.
+FetchException.longError.35=Splitfile decoding produced a data block that wasn't in the original list of keys. It is likely that the insert was corrupted, but it is possible that this is a bug or hardware failure on your computer.
 FetchException.longError.3=Don't know what to do with metadata
 FetchException.longError.4=Failed to parse metadata
 FetchException.longError.5=Failure in extracting files from an archive
@@ -622,6 +623,7 @@ FetchException.shortError.31=Content sanitization failed
 FetchException.shortError.32=Content filter encountered unknown type
 FetchException.shortError.33=Content filter encountered dangerous type
 FetchException.shortError.34=Content does not match hashes in metadata
+FetchException.shortError.35=Splitfile decode error
 FetchException.shortError.3=Unknown metadata
 FetchException.shortError.4=Invalid metadata
 FetchException.shortError.5=Archive failure
