--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -517,6 +517,7 @@ FetchException.longError.31=Le filtre de contenu n'était pas en mesure de garan
 FetchException.longError.32=Le filtre de contenu n'est pas familier avec le type MIME des données et n'est pas en mesure de les traiter
 FetchException.longError.33=Le filtre de contenu a découvert un type MIME qui'il sait être dangereux, donc il n'est pas en mesure de traiter la demande
 FetchException.longError.34=Les résumés (hash) dans la métadonnée ne correspondent pas à la donnée actuelle. La donnée peut avoir été corrompue durant son téléchargement, ou elle peut avoir été altérée, par exemple, si le noeud inséreur était cassé ou si la donnée a changé sur le disque source à la mi-insertion.
+FetchException.longError.35=Le décodage du fichier fractionné a produit un bloc de données qui n'était pas présent dans la liste de clés d'origine. Il semblerait que l'insertion ait été corrompue, mais il est possible que cela soit un bug ou une panne matérielle sur votre ordinateur.
 FetchException.longError.4=L'analyse des méta-données a échoué
 FetchException.longError.5=L'extraction du fichier de l'achive a échoué
 FetchException.longError.6=Le décodage d'un bloc a échoué
@@ -551,6 +552,7 @@ FetchException.shortError.31=La sécurisation du contenu a échoué
 FetchException.shortError.32=Le filtre de contenu a rencoontré un type MIME inconnu
 FetchException.shortError.33=Le filtre de contenu a rencontré un type MIME dangereux
 FetchException.shortError.34=Le contenu ne coïncide pas avec les résumés (hash) dans les métadonnées.
+FetchException.shortError.35=Erreur de décodage du fichier fractionné
 FetchException.shortError.4=Méta-donnée invalide
 FetchException.shortError.5=Echec de l'archive
 FetchException.shortError.6=Erreur de décodage de bloc
@@ -1833,6 +1835,7 @@ WelcomeToadlet.restartingTitle=Le noeud est en train de redémarrer.
 WelcomeToadlet.searchBoxLabel=Chercher sur Freenet (pourrait prendre un certain temps)
 WelcomeToadlet.searchBoxWarningSlow=Actuellement, la recherche peut prendre du temps, donc le statut de la recherche et les résultats seront affichés dans une nouvelle fenêtre. Vous devriez jeter un œil aux index ci-dessous pendant que vous attendez que la recherche aboutisse.
 WelcomeToadlet.searchFreenet=Chercher sur Freenet !
+WelcomeToadlet.searchPluginLoading=Le plugin nécessaire à la recherche sur Freenet n'est pas encore chargé, probablement parce qu'il est en train d'être mis à jour. S'il vous plaît, rechargez la page quelques fois, ou allez à ${link}la page des plugins${/link} pour voir la progression actuelle.
 WelcomeToadlet.searchPluginNotLoaded=Le plugin de recherche n'est pas chargé !
 WelcomeToadlet.shutdown=Eteindre
 WelcomeToadlet.shutdownConfirm=Etes-vous sûr de vouloir arrêter le noeud Freenet ?
