--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -881,15 +881,21 @@ Node.invalidStoreSize=Store size must be at least 32MB
 Node.l10nLanguage=The language Freenet will use to display messages
 Node.l10nLanguageLong=This setting will change the language used to display messages. Keep in mind that some strings won't be translated until next node startup though.
 Node.masterKeyFile=Location of the master keys file
-Node.masterKeyFileLong=Filename for the master keys file. This contains the encryption keys for the cache of recently visited sites (client-cache), the download queue etc. These may be passworded through the security levels page, but securely deleting the keys file will make them useless even with the password.
+Node.masterKeyFileLong=Filename for the master keys file. This contains the encryption keys for the cache of recently visited sites (client-cache), the download queue etc. These may be passworded through the security levels page, but securely deleting the keys file will make them useless even with the password. (If this is a relative path, it will be taken relative to the user data directory.)
 Node.maxHTL=Maximum HTL
 Node.maxHTLLong=Maximum HTL (FOR DEVELOPER USE ONLY!)
 Node.maxOpennetPeers=Maximum number of Opennet peers
 Node.maxOpennetPeersLong=Maximum number of Opennet peers (must be between 0 and 40 inclusive, the actual limit will depend on the number of Friends and your bandwidth limit, and will be shown on the statistics page).
 Node.maxOpennetPeersMustBeTwentyOrLess=Must be forty or less
 Node.mustBePositive=Config value must be positive
-Node.nodeDir=Node directory
-Node.nodeDirLong=Name of directory to put node-related files e.g. peers list in
+Node.nodeDir=Node-reference directory
+Node.nodeDirLong=Path of directory for node-related information (e.g. node identity, peers).
+Node.cfgDir=Config directory
+Node.cfgDirLong=Path of directory for user-editable config (e.g. language overrides).
+Node.userDir=User data directory
+Node.userDirLong=Path of directory for user data (e.g. bookmarks, download lists).
+Node.runDir=Run-time state directory
+Node.runDirLong=Path of directory for run-time state. This can be cleared out when Freenet is not running.
 Node.nodeName=Nickname for this Freenet node
 Node.nodeNameLong=Node nickname. This will be visible to your friends only.
 Node.notEnoughSpaceToAutoEncryptTitle=Insufficient disk space to encrypt the downloads queue!
