on second thoughts, a configurable plugin directory makes things easier to package

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -896,6 +896,8 @@ Node.userDir=User data directory
 Node.userDirLong=Path of directory for user data (e.g. bookmarks, download lists).
 Node.runDir=Run-time state directory
 Node.runDirLong=Path of directory for run-time state. This can be cleared out when Freenet is not running.
+Node.pluginDir=Plugin directory
+Node.pluginDirLong=Path of directory for plugins.
 Node.nodeName=Nickname for this Freenet node
 Node.nodeNameLong=Node nickname. This will be visible to your friends only.
 Node.notEnoughSpaceToAutoEncryptTitle=Insufficient disk space to encrypt the downloads queue!
