Note the dangerousness of FLAC audio

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -200,6 +200,8 @@ ContentFilter.applicationPdfReadAdvice=Adobe(R) PDF document - VERY DANGEROUS!
 ContentFilter.applicationPdfWriteAdvice=Adobe(R) PDF document - VERY DANGEROUS!
 ContentFilter.EOFMessage=Unexpected end of file
 ContentFilter.EOFDescription=The filter needed more data from the file you were accessing than was available. The file may be malformed or corrupted.
+ContentFilter.audioFLACReadAdvice=FLAC audio format - Dangerous. May contain off Freenet links to album art. If followed, these links can harm anonymity.
+ContentFilter.audioFLACWriteAdvice=FLAC audio format - probably not dangerous.
 ContentFilter.containerOggReadAdvice=Ogg container - probably not dangerous, depending on the codec, but can contain links to nonanonymous sites
 ContentFilter.containerOggWriteAdvice=Ogg container - probably not dangerous, depending on the codec, but can often include the name and version of the encoder used
 ContentFilter.imageBMPReadAdvice=BMP image - probably not dangerous
