Throw exception on Ogg with no valid bitstreams

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1062,6 +1062,8 @@ OggBitstreamFilter.MalformedTitle=Malformed Ogg Bitstream
 OggBitstreamFilter.MalformedMessage=The Ogg bitstream is not correctly formatted, and could not be properly validated.
 OggPage.ValidSubpageTitle=Ogg Page has Valid Subpage 
 OggPage.ValidSubpageMessage=An element in the Ogg bitstream was found to contain another valid element. This is not a feature of any currently supported bitstream formats. It is likely the bitstream has been maliciously altered in an attempt to bypass the content filter. If this is the case, this file is dangerous, and should not be opened.
+OggFilter.EmptyOutputTitle=No Valid Ogg Bitstreams
+OggFilter.EmptyOutputDescription=The ContentFilter was unable to find any bitstreams in the file which could be safely validated.
 OpennetConnectionsToadlet.successTimeTitle=Last success
 OpennetConnectionsToadlet.successTime=Last time there was a successful CHK fetch from the node
 OpennetConnectionsToadlet.fullTitle=${counts} Strangers (Untrusted Peers) of ${name}
