Exception on invalid stream

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -429,6 +429,8 @@ FirstTimeWizardToadlet.skipWizard=I will configure Freenet manually (not recomme
 FirstTimeWizardToadlet.tenPercentDisk=(= 10% of free disk space)
 FirstTimeWizardToadlet.fivePercentDisk=(= 5% of free disk space)
 FirstTimeWizardToadlet.backToSecurityLevels=Don't set a password and return to the wizard.
+FLAC.InvalidFLACStreamTitle=Invalid FLAC stream
+FLAC.InvalidFLACStreamMessage=The FLAC stream was found to be corrupt or malformed, and was unable to sanitized.
 FProxyToadlet.abortToHomepage=Abort and return to the FProxy home page
 FProxyToadlet.addFriendTitle=Add a Friend
 FProxyToadlet.addFriend=Connect to a friend running Freenet to improve your security
