Update german translation

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -504,6 +504,7 @@ FetchException.shortError.6=Block-Dekodierungs-Fehler
 FetchException.shortError.7=Zu viele Metadaten-Ebenen
 FetchException.shortError.8=Zu viele Archiv-Neustarts
 FetchException.shortError.9=Zu viel Rekursion
+FileInsertWizardToadlet.insertCanonical=Dies wird immer denselben Schlüssel für dieselbe Datei erzeugen, dies ist vorteilhaft für Filesharing. Wenn allerdings ein Angreifer weiß, welche Datei du hochlädst, kann er dich mit dieser Methode deutlich leichter lokalisieren.
 FileOffer.acceptTransferButton=Übertragung akzeptieren
 FileOffer.askUserTitle=Direkte Datei-Übertragung
 FileOffer.commentLabel=Kommentar:
@@ -1334,6 +1335,12 @@ SecurityLevels.friendsThreatLevel.desc.NORMAL=Freenet wird eine beschränkte Men
 SecurityLevels.friendsThreatLevel.name.HIGH=HOCH
 SecurityLevels.friendsThreatLevel.name.LOW=NIEDRIG
 SecurityLevels.friendsThreatLevel.name.NORMAL=NORMAL
+SecurityLevels.networkThreatLevel.darknetExplain=Ich kenne mindestens 3 Freunde (10+ für eine bessere Performance), die schon Freenet benutzen: Verbinde nur zu Freunden.
+SecurityLevels.networkThreatLevel.darknetLabel=Darknet Modus (Verbinde ausschließlich zu Freunden)
+SecurityLevels.networkThreatLevel.opennetExplain=Ich kenne niemanden, der schon Freenet benutzt: Verbinde automatisch mit anderen Freenet Knoten
+SecurityLevels.networkThreatLevel.opennetFriendsWarning=Das Hinzufügen von Freunden, die du nicht persönlich (außerhalb von Freenet) kennst, wird deine Sicherheit nicht erhöhen und wird die Geschwindigkeit verringern!
+SecurityLevels.networkThreatLevel.opennetIntro=Kennst du jemanden persönlich, der schon Freenet benutzt? Wenn du mindestens 3 Leute kennst, die schon Freenet benutzen, kannst du den Darknet Modus aktivieren. Freenet wird sich dann nur zu deinen Freunden verbinden, was die Sicherheit deutlich erhöht. Wenn du allerdings niemanden kennst, der Freenet benutzt oder maximale Performance haben möchtest, solltest du den Opennet Modus aktivieren und Freenet wird sich automatisch zu anderen, von Fremden betriebenen, Freenetknoten verbinden.
+SecurityLevels.networkThreatLevel.opennetLabel=Opennet Modus (Verbinde zu Freunden und Fremden)
 SecurityLevels.networkThreatLevel.choice.HIGH=Ich möchte es für andere deutlich schwerer machen, meine Kommunikation zu beobachten oder ich befürchte, dass mein Provider versuchen könnte, Freenet zu blockieren.
 SecurityLevels.networkThreatLevel.choice.LOW=Ich mache mir keine Gedanken über Überwachung und will maximale Geschwindigkeit.
 SecurityLevels.networkThreatLevel.choice.MAXIMUM=Ich plane, auf Informationen zuzugreifen, die dazu führen können, dass ich verhaftet, gefangen genommen werde oder schlimmeres. Ich verstehe, dass Freenet experimentell ist und keine Sicherheit gegen bestimmte (bekannte) Angriffe bieten kann. Aber ich akzeptiere die Risiken verglichen mit den Alternativen.
