Some more german translation

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -505,6 +505,9 @@ FetchException.shortError.7=Zu viele Metadaten-Ebenen
 FetchException.shortError.8=Zu viele Archiv-Neustarts
 FetchException.shortError.9=Zu viel Rekursion
 FileInsertWizardToadlet.insertCanonical=Dies wird immer denselben Schlüssel für dieselbe Datei erzeugen, dies ist vorteilhaft für Filesharing. Wenn allerdings ein Angreifer weiß, welche Datei du hochlädst, kann er dich mit dieser Methode deutlich leichter lokalisieren.
+FileInsertWizardToadlet.insertIntro=Es gibt zahlreiche verschiedene Wege, um eine Datei in Freenet hochzuladen, abhängig davon, ob du die Datei schon vorher hochgeladen hast und welche Sicherheitsansprüche du hast:
+FileInsertWizardToadlet.insertRandom=Dies ist deutlich sicherer als die erste Option, allerdings wird jedesmal ein anderer Schlüssel erzeugt, wenn du oder jemand anders die Datei hochlädt. Benutze diese Option, wenn du die Quelle für sensible/wichtige Daten bist.
+FileInsertWizardToadlet.insertRandomTitle=Füge einen zufälligen, sicheren Schlüssel ein
 FileOffer.acceptTransferButton=Übertragung akzeptieren
 FileOffer.askUserTitle=Direkte Datei-Übertragung
 FileOffer.commentLabel=Kommentar:
