More german translation updates

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -358,7 +358,7 @@ FProxyToadlet.expectedMimeType=Erwarteter MIME-Typ: ${mime}
 FProxyToadlet.explanationTitle=Erklärung
 FProxyToadlet.fetchLargeFileAnywayAndDisplay=Trotzdem abrufen und die Datei im Browser anzeigen
 FProxyToadlet.fetchLargeFileAnywayAndDisplayButton=Anzeigen
-FProxyToadlet.fetchingPageBox=Freenet läd die angefragte Seite herunter
+FProxyToadlet.fetchingPageBox=Freenet lädt die angefragte Seite herunter
 FProxyToadlet.fetchingPageOptions=Ihre Optionen
 FProxyToadlet.fetchingPageTitle=Seite wird geladen
 FProxyToadlet.fileInformationTitle=Datei-Informationen
@@ -838,7 +838,7 @@ Node.notUsingWrapperShort=Freenet läuft ohne den Wrapper (Hilfsumgebung). Dies 
 Node.notUsingWrapperTitle=Der Wrapper wird nicht benutzt!
 Node.oneConnectionPerIP=Auf eine Verbindung pro Adresse beschränken?
 Node.oneConnectionPerIPLong=Nicht mehr als eine Verbindung pro Adresse erlauben? Dies wird es Angreifern ein bisschen schwerer machen sich, als verschiedene Identitäten, mehr als einmal mit Ihrem Knoten zu verbinden, um Ihr Routing (Weiterleitungs-Strategie) zu beherrschen oder Harvesting (Sammeln von Daten) zu erleichtern. Es verhindert auch gleichzeitig mit demselben Knoten über darknet und opennet verbunden zu sein.
-Node.openJDKMightBeVulnerableXML=Bitte updaten Sie Java! Ihr Java könnte verwundbar für mehrere remote code execution exploits sein. Unglücklicherweise ist es für Freenet schwierig herauszufinden, ob das Problem behoben ist oder nicht. Wenn Sie sich nicht sicher sind, lassen Sie bitte Thaw und Freetalk nicht laufen, bis Sie Java aktualisiert haben (Möglicherweise über den Update-Mechanismus von Ihrem Betriebssystem) und starten Sie Freenet und Thaw neu.
+Node.openJDKMightBeVulnerableXML=Bitte aktualisieren Sie Java! Ihr Java könnte verwundbar für mehrere remote code execution exploits sein. Unglücklicherweise ist es für Freenet schwierig herauszufinden, ob das Problem behoben ist oder nicht. Wenn Sie sich nicht sicher sind, lassen Sie bitte Thaw und Freetalk nicht laufen, bis Sie Java aktualisiert haben (Möglicherweise über den Update-Mechanismus von Ihrem Betriebssystem) und starten Sie Freenet und Thaw neu.
 Node.opennetEnabled=Unsicheren Modus einschalten (automatisch mit nicht vertrauenswürdigen Knoten verbinden)?
 Node.opennetEnabledLong=Unsicheren Modus (alias Opennet) einschalten? Wenn dies aktiviert ist, wird der Knoten automatisch Referenzen mit anderen nicht vertrauenswürdigen Knoten (Fremden im Gegensatz zu Freunden) austauschen. Dies bedeutet aber, dass die Tatsache, dass Sie einen Knoten betreiben, nicht länger vertraulich ist und viele Attacken viel einfacher sind. Wenn Sie genügend Leute kennen, die Freenet benutzen, sollten Sie bei vertrauenswürdigen (Freunde) Verbindungen mit ihnen bleiben und dies ausschalten.
 Node.outBWLimit=Limit für die ausgehende Bandbreite (Bytes pro Sekunde)
@@ -942,6 +942,7 @@ NodeStat.statsPersister=Datei in der die Knoten-Statistiken gespeichert werden
 NodeStat.statsPersisterLong=Datei, in der die Knoten-Statistiken gespeichert werden (nicht die Client(Kunden)-Statistiken, und diese werden benutzt um zu entscheiden ob Anfragen akzeptiert werden, deshalb bitte nicht löschen)
 NodeStat.threadLimit=Thread-Limit
 NodeStat.threadLimitLong=Der Knoten wird versuchen seinen Thread(Prozess-Strang)-Gebrauch auf den angegebenen Wert zu beschränken, indem er neue Anfragen ablehnt
+NodeStats.allRequests=Alle Anfragen
 NodeStats.mustBePercentValueNotFull=Dieser Wert muss eine Prozent-Zahl zwischen 0 und 99 sein.
 NodeStats.valueTooLow=Dieser Wert ist zu niedrig für diese Einstellung, erhöhen Sie ihn!
 NodeUpdateManager.enabled=Auf neue Versionen prüfen und herunterladen
@@ -1433,10 +1434,11 @@ StaticToadlet.pathInvalidChars=Der angegebene URI enthält nicht erlaubte Zeiche
 StaticToadlet.pathNotFound=Der Pfad, den Sie angegeben haben, existiert nicht.
 StaticToadlet.pathNotFoundTitle=Pfad nicht gefunden
 StatisticsToadlet.PUB_KEY=Öffentlicher Schlüssel
+StatisticsToadlet.STORE=Speicher
 StatisticsToadlet.accessRate=Zugriffsrate
 StatisticsToadlet.ackOnlyBytes=Bestätigungs-Pakete: ${total}
 StatisticsToadlet.activityInserts=Hochladen: ${CHKhandlers} CHK handler, ${SSKhandlers} SSK handler (${local} lokal)
-StatisticsToadlet.activityRequests=Anfragen: ${totalSenders} Sender insgesamt, ${CHKhandlers} CHK handler, ${SSKhandlers} SSK handler (${local} lokal)
+StatisticsToadlet.activityRequests=Anfragen: ${CHKhandlers} CHK handler, ${SSKhandlers} SSK handler (${local} lokal)
 StatisticsToadlet.adminBytes=Verwaltungs-Bytes: ${initial} Initialisierungs-Nachrichten, ${changedIP} IP-Änderungs-Nachrichten, ${disconn} Trennungs-Mitteilungen, ${routingStatus} Routing-Status
 StatisticsToadlet.allocMemory=Zugewiesener Java-Speicher: ${memory}
 StatisticsToadlet.amount=Anzahl
@@ -1446,14 +1448,14 @@ StatisticsToadlet.avgDist=Durchschnittliche Entfernung
 StatisticsToadlet.avgTime=Durchschnittliche Zeit
 StatisticsToadlet.bandwidthTitle=Bandbreite
 StatisticsToadlet.capacity=Kapazität
-StatisticsToadlet.cpus=Verfügare CPUs: ${count}
+StatisticsToadlet.cpus=Verfügbare CPUs: ${count}
 StatisticsToadlet.databaseJobsByPriority=Datenbank Aufgaben
 StatisticsToadlet.datastore=Datenbank
 StatisticsToadlet.debuggingBytes=Bytes zur Fehlererkennung: ${netColoring} Netzwerk-Färbung, ${ping} Ping, ${probe} Probe Requests, ${routed} weitergeleitete Test-Nachrichten.
 StatisticsToadlet.distanceStats=Entfernungsstatistiken
 StatisticsToadlet.fullTitle=Statistiken für ${name}
 StatisticsToadlet.getLogs=Letzte Log-Datei des Knotens abrufen
-StatisticsToadlet.inputRate=Eingehend: ${rate}/Sekunde (von ${max})
+StatisticsToadlet.inputRate=Eingehend: ${rate}/sec (von ${max}/sec)
 StatisticsToadlet.insertOutput=Insert output (excluding payload): CHK ${chk} SSK ${ssk}.
 StatisticsToadlet.javaVersion=Java-Version: ${version}
 StatisticsToadlet.jvmInfoTitle=JVM-Info
@@ -1470,8 +1472,8 @@ StatisticsToadlet.opennetStats=Opennet Statistiken
 StatisticsToadlet.osArch=OS-Architektur: ${arch}
 StatisticsToadlet.osName=OS-Name: ${name}
 StatisticsToadlet.osVersion=OS-Version: ${version}
-StatisticsToadlet.outputRate=Ausgehend: ${rate}/Sekunde (von ${max})
-StatisticsToadlet.payloadOutput=Nutzlast ausgehend: ${total} (${rate}/Sekunde)(${percent}%)
+StatisticsToadlet.outputRate=Ausgehend: ${rate}/sec (von ${max}/sec)
+StatisticsToadlet.payloadOutput=Nutzlast ausgehend: ${total} (${rate}/sec)(${percent}%)
 StatisticsToadlet.peerStatsTitle=Partner-Statistiken
 StatisticsToadlet.priority=Priorität
 StatisticsToadlet.requestOutput=Ausgehende Anfragen (ohne Nutzlast): CHK ${chk} SSK ${ssk}.
@@ -1481,14 +1483,17 @@ StatisticsToadlet.routingDisabledShort=Nicht weiterleiten
 StatisticsToadlet.running=Aktiv
 StatisticsToadlet.statisticGatheringTitle=Verschiedene Statistiken
 StatisticsToadlet.storeJobsByPriority=Store checker jobs by priority
+StatisticsToadlet.successByHTL=Erfolgsraten mit HTL (downloads)
 StatisticsToadlet.successRate=Erfolgsrate
 StatisticsToadlet.swapOutput=Swapping Output: ${total}.
 StatisticsToadlet.threadDumpButton=Thread-Dump generieren
 StatisticsToadlet.threads=Laufende Threads: ${running}/${max}
 StatisticsToadlet.threadsByPriority=Threads nach Priorität
-StatisticsToadlet.totalInput=Gesamt eingehend: ${total} (${rate}/Sekunde)
-StatisticsToadlet.totalOutput=Gesamt ausgehend: ${total} (${rate}/Sekunde)
-StatisticsToadlet.totalOverhead=Gesamter non-request overhead: ${rate}/Sek. (${percent}%).
+StatisticsToadlet.totalInput=Gesamt eingehend: ${total}
+StatisticsToadlet.totalInputSession=Session Total Input: ${total} (${rate}/sec Durchschnitt)
+StatisticsToadlet.totalOutput=Gesamt ausgehend: ${total}
+StatisticsToadlet.totalOutputSession=Session Total Output: ${total} (${rate}/sec Durchschnitt)
+StatisticsToadlet.totalOverhead=Gesamter non-request overhead: ${rate}/sec (${percent}%).
 StatisticsToadlet.totalTime=Zeit insgesamt
 StatisticsToadlet.transferringRequests=Übertrage Anfragen: sende ${senders}, empfange ${receivers}
 StatisticsToadlet.unaccountedBytes=Andere ausgehende Daten: ${total} (${percent}%)
@@ -1584,6 +1589,8 @@ TranslationToadlet.translationUpdatedTitle=Übersetzung aktualisiert!
 TranslationToadlet.updateTranslationCommand=Die Übersetzung aktualisieren!
 UnknownContentTypeException.explanation=Ihr Freenet-Knoten weiß nichts über diesen MIME-Typ. Das heißt, dass Ihr Browser etwas gefährliches tun könnte, wenn diese Datei heruntergeladen wird. Zum Beispiel können viele Formate eingebettete Bilder oder Videos enthalten, welche aus dem Internet (genauer dem Web) heruntergeladen werden; dies ist keineswegs harmlos, weil dies Ihre Anonymität zunichte machen und Ihre IP-Adresse verraten kann(wenn der Angreifer die Web-Seite betreibt oder Zugriff auf deren Log-Dateien hat). Links ins Web (Internet) können auch eine Gefahr darstellen, aus fast denselben Gründen, genau wie Scripting, aus diesen und anderen Gründen.
 UnknownContentTypeException.title=Unbekannter und potenziell gefährlicher Inhaltstyp: ${type}
+UnsupportedCharsetInFilterException.explanation=Dies ist ein sehr seltener Zeichensatz, der von Java nicht unterstützt wird und es ist sehr wahrscheinlich, daß dies ein Versuch ist, den Inhaltsfilter zu umgehen oder es sind einfach nur defekte Daten.
+UnsupportedCharsetInFilterException.title=Nicht unterstützter Text-Zeichensatz: ${charset}.
 UpdateDeployContext.cannotUpdateNoExtJar=Die freenet-ext.jar in der wrapper.conf konnte nicht gefunden werden (gefunden wurde die freenet.jar: ${mainFilename})
 UpdateDeployContext.cannotUpdateNoJars=Konnte die Freenet-jars in der wrapper.conf nicht finden
 UpdateDeployContext.cannotUpdateNoMainJar=Die freenet.jar in der wrapper.conf konnte nicht gefunden werden (gefunden wurde die freenet-ext.jar: ${extFilename})
