--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1592,6 +1592,7 @@ StatisticsToadlet.maxMemory=Maximum Java memory: ${memory}
 StatisticsToadlet.maxTotalPeers=Max peers
 StatisticsToadlet.maxOpennetPeers=Max strangers
 StatisticsToadlet.nodeToNodeBytes=Node to node messages: ${total}
+StatisticsToadlet.loadAllocationNoticesBytes=Load allocation notices: ${total}
 StatisticsToadlet.noRequests=Your node is not processing any requests right now.
 StatisticsToadlet.offerReplys=Running offer replys: ${chk} CHK, ${ssk} SSK.
 StatisticsToadlet.offeredKeyOutput=Offered keys: sending keys ${total}, sending offers ${offered}
