--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1626,7 +1626,7 @@ StatisticsToadlet.totalOutput=Global Total Output: ${total}
 StatisticsToadlet.totalOutputSession=Session Total Output: ${total} (${rate}/s average)
 StatisticsToadlet.totalOverhead=Total non-request overhead: ${rate}/sec (${percent}%).
 StatisticsToadlet.totalTime=Total Time
-StatisticsToadlet.transferringRequests=Transferring Requests: sending ${senders}, receiving ${receivers}, receiving turtles ${turtles}
+StatisticsToadlet.transferringRequests=Transferring Requests: sending ${senders}, receiving ${receivers}
 StatisticsToadlet.uomBytes=Updater Output: ${total}
 StatisticsToadlet.unaccountedBytes=Other output: ${total} (${percent}%)
 StatisticsToadlet.usedMemory=Used Java memory: ${memory}
