Add config option to skip the “not running under wrapper” warning.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -921,6 +921,8 @@ Node.publishOurPeersLocation=Shall we send our peers' locations to our peers?
 Node.publishOurPeersLocationLong=Shall we send our peers' locations to our peers? Doing so helps routing but gives some information away to a potential attacker.
 Node.routeAccordingToOurPeersLocation=Shall we use the locations of the peers of our peers into account for routing purposes?
 Node.routeAccordingToOurPeersLocationLong=Shall we use the locations of the peers of our peers into account for routing purposes? Doing so helps routing but might help a potential attacker.
+Node.skipWrapperWarning=Skip “not using the wrapper” warning?
+Node.skipWrapperWarningLong=If true, the “not using the wrapper” warning will not be shown. Note that this will only hide the warning from the next restart on.
 Node.slashdotCacheLifetime=How long to keep data in the recent requests cache?
 Node.slashdotCacheLifetimeLong=How long to keep data in the recent requests cache (milliseconds)? Note that this goes away on restart anyway.
 Node.slashdotCacheSize=Maximum size of the recent requests cache
