Add useAIMDs: Configure whether or not to use AIMD's.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -990,6 +990,8 @@ NodeClientCore.tempDir=Temp files directory
 NodeClientCore.tempDirLong=Name of directory to put temporary files in
 NodeClientCore.uploadAllowedDirs=Directories uploading is allowed from
 NodeClientCore.uploadAllowedDirsLong=Semicolon separated list of directories from which uploads are allowed. Empty means no uploads from disk allowed, "all" means uploads allowed from anywhere (including system files etc!). WARNING! If this is set to "all" any file on your computer can be uploaded by any user with access to FCP.
+NodeClientCore.useAIMDs=Use AIMDs? (EXPERTS ONLY)
+NodeClientCore.useAIMDsLong=Enable originator-level throttling of request starters based on TCP-style Additive Increase Multiplicative Decrease rate estimation. This enables or disables a key part of the old load management system. EXPERTS ONLY!!!
 NodeIPDectector.inclLocalAddress=Include local addresses in noderef
 NodeIPDectector.inclLocalAddressLong=Whether to include local addresses (LAN and localhost) in node references. This will not be useful unless the both sides set allowLocalAddresses=true for the respective references (use the Friends page in advanced mode to set this flag).
 NodeIPDectector.ipOverride=IP address override
