Make the English l10n for plugin downloading more precise.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1112,11 +1112,11 @@ PluginJarUpdater.pluginUpdatedTitle=A new version of the ${name} plugin is avail
 PluginJarUpdater.updatePlugin=Update plugin after final security checks
 PluginJarUpdater.willDeployAfterRevocationCheck=The plugin ${name} will be deployed as soon as we have finished double-checking that the auto-update system has not been compromised.
 PluginManager.alwaysLoadPluginsFromCentralServer=Always load plugins over the web?
-PluginManager.alwaysLoadPluginsFromCentralServerLong=If true, we will always load plugins over the web, and not try to fetch them from Freenet. This involves contacting a central server over the web (using HTTPS) so it is bad for security, but plugins may load more quickly.
+PluginManager.alwaysLoadPluginsFromCentralServerLong=If true, we will always load plugins over the web, and not try to fetch them from Freenet. The plugins will be downloaded from our central web server via SSL, the SSL certificate is bundled with your Freenet node. Therefore, downloading from the web will gurantee the integrity of the files and will be faster than from Freenet, but it will not be anonymous - if you don't want anyone to know that you run Freenet, disable this.
 PluginManager.cannotSetOnceLoaded=Cannot set the plugins list once loaded
 PluginManager.deleteFailedPluginButton=Don't try again on next startup
 PluginManager.fallbackFromFreenetLoadToCentralServer=If an official plugin load over Freenet fails, load it from the central server?
-PluginManager.fallbackFromFreenetLoadToCentralServerLong=If a load fails over Freenet, try to load it from the central server before giving up. This involves contacting a central server over the web (using HTTPS) so it is bad for security, but it may improve reliability.
+PluginManager.fallbackFromFreenetLoadToCentralServerLong=If a load fails over Freenet, try to load it from the central server before giving up. The plugins will be downloaded from our central web server via SSL, the SSL certificate is bundled with your Freenet node. Therefore, downloading from the web will gurantee the integrity of the files, but it will not be anonymous - if you don't want anyone to know that you run Freenet, disable this.
 PluginManager.loadedOnStartup=Plugins to load on startup
 PluginManager.loadedOnStartupLong=Classpath, name and location for plugins to load when node starts up
 PluginManager.loadedPlugins=Plugins to load on start up
