--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -899,11 +899,11 @@ Node.notEnoughSpaceToAutoEncryptTitle=Insufficient disk space to encrypt the dow
 Node.notEnoughSpaceToAutoEncrypt=There is not enough space so the downloads/uploads queue has not been encrypted. If your node is seized attackers will be able to see what you have downloaded! You should clear enough disk space for the migration (${size}) and restart, or securely delete ${file} (shut down the node first), or switch physical security levels to LOW if you don't need to encrypt it.
 Node.notEnoughSpaceToAutoDecryptTitle=Insufficient disk space to decrypt the downloads queue!
 Node.notEnoughSpaceToAutoDecrypt=There is not enough space so the downloads queue has not been decrypted. Your node will be slightly slower, but this probably isn't a problem. You can shut down your node and remove ${file} if you want to wipe the downloads database, or free up ${size} and restart.
-Node.notUsingSunVMTitle=Not using a Sun JVM
-Node.notUsingSunVM=You are trying to run Freenet under a non-Sun JVM: ${vendor} ${version} (${name}). This is not recommended: Freenet may not run well. Please get Sun java from http://www.java.com/getjava/ if possible.
-Node.notUsingSunVMShort=Freenet is running on a non-Sun JVM, this is not recommended, please get the latest Sun Java. 
+Node.notUsingSunVMTitle=Not using a Sun Java
+Node.notUsingSunVM=You are trying to run Freenet under a non-Sun Java: ${vendor} ${version} (${name}). This is not recommended: Freenet may not run well. Please get Sun Java from http://www.java.com/getjava/ if possible.
+Node.notUsingSunVMShort=Freenet is running on a non-Sun Java, this is not recommended, please get the latest Sun Java. 
 Node.notUsingWrapperTitle=Not using the wrapper!
-Node.notUsingWrapper=You are running Freenet without the wrapper. This is not recommended. Freenet will not be able to restart itself, so auto-updating won't work, and if the JVM goes off into limbo, it won't get restarted either. Also Freenet can't generate stack dumps in some places so debugging will be marginally harder.
+Node.notUsingWrapper=You are running Freenet without the wrapper. This is not recommended. Freenet will not be able to restart itself, so auto-updating won't work, and if Java crashes, it won't get restarted either. Also Freenet can't generate stack dumps in some places so debugging will be marginally harder.
 Node.notUsingWrapperShort=Freenet is running without the wrapper. This is not recommended.
 Node.oneConnectionPerIP=Limit to one connection per address?
 Node.oneConnectionPerIPLong=Don't allow more than one connection per address? This will make it slightly harder for an attacker to connect more than once to your node as different identities, in order to dominate your routing or make harvesting easier. Also prevents having the same node connected on darknet and opennet simultaneously. 
@@ -944,7 +944,7 @@ Node.storeBloomFilterSize=Bloom filter size (total) in bytes
 Node.storeBloomFilterSizeLong=Bloom filter size (total) in bytes. Usually 1/2048th the size of data store is more than enough. Set this to zero to disable bloom filter. Set this to -1 to reset to default.
 Node.storeBloomFilterCounting=Use counting bloom filter?
 Node.storeBloomFilterCountingLong=Use 2-bit counting bloom filter? (don't touch this unless you know what you are doing)
-Node.sunJVMxmlRemoteCodeExecTitle=Upgrade your Java immediately! Freenet has disabled important functions including search to limit damage due to a severe vulnerability in your JVM! PLEASE DO NOT USE THAW OR FREETALK, and if you have untrusted people on your local network then please SHUT DOWN FREENET NOW!
+Node.sunJVMxmlRemoteCodeExecTitle=Upgrade your Java immediately! Freenet has disabled important functions including search to limit damage due to a severe vulnerability in your outdated Java version! PLEASE DO NOT USE THAW, FROST OR FREETALK, and if you have untrusted people on your local network then please SHUT DOWN FREENET NOW!
 Node.sunJVMxmlRemoteCodeExec=Your installed version of Java is vulnerable to a severe remote exploit (remote code execution!). You must upgrade to at least Java 5 update 20 or Java 6 update 15 as soon as possible. Freenet has disabled any plugins handling XML for the time being, but this includes searching and chat so you should upgrade ASAP! See http://www.cert.fi/en/reports/2009/vulnerability2009085.html for details. Also, please do not use Thaw or Freetalk. The UPnP plugin is enabled, it might present a risk if you have bad guys on your LAN, but without it Freenet will not be able to port forward and will have severe problems.
 Node.openJDKMightBeVulnerableXML=Please update Java! Your Java might be vulnerable to a severe remote code execution exploit. Unfortunately it is difficult for Freenet to detect whether it is fixed or not. If you are not sure, please do not run Thaw or Freetalk until you have updated Java (probably via your operating system's updating mechanism) and restarted Freenet and Thaw.
 Node.swapRInterval=Swap request send interval (ms)
@@ -1121,8 +1121,8 @@ PluginManager.loadedOnStartup=Plugins to load on startup
 PluginManager.loadedOnStartupLong=Classpath, name and location for plugins to load when node starts up
 PluginManager.loadedPlugins=Plugins to load on start up
 PluginManager.loadedPluginsLong=A list of plugins that are started when Freenet starts
-PluginManager.pluginReqNewerJVM=The plugin ${name} seems to require a later JVM. Please install at least Sun java 1.5, or remove the plugin.
-PluginManager.pluginReqNewerJVMTitle=Later JVM required by plugin ${name}.
+PluginManager.pluginReqNewerJVM=The plugin ${name} seems to require a later Java version. Please install at least Sun java 1.5, or remove the plugin.
+PluginManager.pluginReqNewerJVMTitle=Later Java version required by plugin ${name}.
 PluginManager.pluginLoadingFailedTitle=Could not load plugin!
 PluginManager.pluginLoadingFailedShort=Could not load plugin ${name}!
 PluginManager.pluginLoadingFailed=The plugin ${name} could not be loaded
@@ -1579,11 +1579,11 @@ StatisticsToadlet.globalWindow=Global window
 StatisticsToadlet.inputRate=Input Rate: ${rate}/s (of ${max}/s)
 StatisticsToadlet.insertOutput=Insert output (excluding payload): CHK ${chk} SSK ${ssk}.
 StatisticsToadlet.jobType=Job Type
-StatisticsToadlet.jvmInfoTitle=JVM Info
-StatisticsToadlet.jvmName=JVM Name: ${name}
-StatisticsToadlet.jvmVendor=JVM Vendor: ${vendor}
-StatisticsToadlet.javaVersion=Java Version: ${version}
-StatisticsToadlet.jvmVersion=JVM Version: ${version}
+StatisticsToadlet.jvmInfoTitle=Java Info
+StatisticsToadlet.jvmName=Java VM Name: ${name}
+StatisticsToadlet.jvmVendor=Java VM Vendor: ${vendor}
+StatisticsToadlet.javaVersion=Java VM Version: ${version}
+StatisticsToadlet.jvmVersion=Java VM Version: ${version}
 StatisticsToadlet.keys=Keys
 StatisticsToadlet.maxMemory=Maximum Java memory: ${memory}
 StatisticsToadlet.maxTotalPeers=Max peers
