--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -239,7 +239,7 @@ DarknetConnectionsToadlet.fproxyDisabled=FProxy ist deaktiviert (diese Web-Schni
 DarknetConnectionsToadlet.fproxyPort=FProxy: ${port}/TCP (diese Web-Schnittstelle)
 DarknetConnectionsToadlet.fullTitle=${counts} Freunde (vertrauenswürdige Partner) von ${name}
 DarknetConnectionsToadlet.go=Los
-DarknetConnectionsToadlet.goFriendConnectionStatus=Zur Freunde-Seite gehen (http://127.0.0.1:8888/friends/), um zu sehen, ob dieser Freund sich verbindet
+DarknetConnectionsToadlet.goFriendConnectionStatus=Zur Freunde-Seite gehen um zu sehen, ob dieser Freund sich verbindet
 DarknetConnectionsToadlet.idleTime=Zeit seit sich der Knoten verband oder zuletzt gesehen wurde
 DarknetConnectionsToadlet.idleTimeTitle=Verbunden / Untätig
 DarknetConnectionsToadlet.invalidSignature=Nicht in der Lage die Signatur der gegebenen Referenz zu verifizieren (${error}).
@@ -916,6 +916,7 @@ Node.storeSizeLong=Größe des Speichers in Bytes (ACHTUNG: Beim Herunterladen v
 Node.storeType=Art der Speicherung (ÄNDERN SIE DIES NICHT)
 Node.storeTypeLong=Art der Datenspeicherung. Aktuell können dies salt-hash ( benutzt ein Salted on-disk Hashtable mit Bloom-Filter), bdb-index (benutzt BerkeleyDBFreenetStore um den Index zu speichern und speichert die Daten in Dateien auf der Festplatte) oder ram (speichert Index und Daten im RAM) sein. Benutzen Sie ram nur dann, wenn Sie wissen, was sie tun und genug RAM zur Verfügung haben um all ihre Daten zu speichern (und beachten Sie dass diese beim Beenden nicht gespeichert werden)! Änderungen werden erst nach einem Neustart von Freenet wirksam.
 Node.sunJVMxmlRemoteCodeExec=Deine installierte Java Version ist anfällig für schwerwiegende Angriffe von außen (remote code execution!). Du musst mindestens Java 5.20, besser Java 6.15 so schnell wie möglich installieren. Freenet hat jetzt alle Plugins, die XML verwenden, nicht geladen. Dies betrifft auch die Suchen-Funktion und den Chat. Einzelheiten kannst du unter http://www.cert.fi/en/reports/2009/vulnerability2009085.html erfahren. Auch Thaw oder Freetalk sollten nicht verwendet werden. Das UPnP-Plugin ist geladen worden, könnte aber ein Risiko darstellen, wenn gleichzeitig böse Menschen in deinem LAN sind. Ohne das UPnP-Plugin kann Freenet aber kein port-forward betreiben und wird deshalb enorme Probleme bei der Verbindung haben.
+Node.sunJVMxmlRemoteCodeExecTitle=Aktualisieren Sie Ihr Java sobald wie möglich! Freenet hat wichtige Funktionen (einschließlich der Suchfunktion) abgeschaltet da Sie ein veraltetes Java mit einer schwerwiegenden Sicherheitslücke verwenden. BITTE VERWENDEN SIE NICHT THAW, FROST ODER FREETALK, und falls sich nicht vertrauenswürdige Personen in ihrem lokalen Netzwer kbefinden SCHALTEN SIE FREENET SOFORT AUS.
 Node.swapRInterval=Tausch-Anfragen-Sende-Intervall (ms)
 Node.swapRIntervalLong=Intervall in dem Tausch-Anfragen gesendet werden in Millisekunden. Lassen Sie dies in Ruhe!
 Node.throttleLocalTraffic=Lokalen Datenverkehr drosseln?
@@ -924,7 +925,7 @@ Node.tooSmallMTU=MTU zu niedrig
 Node.tooSmallMTULong=Die MTU ihrer Verbindung scheint ${mtu} Bytes zu sein. Freenet wird mit einer MTU unter ${minMTU} Bytes nicht gut funktionieren: Verbindungen werden unzuverlässig und womöglich langsam sein. Bitte beheben Sie dieses Problem, wenn möglich.
 Node.tooSmallMTUShort=Verbindungsprobleme: Die MTU Ihrer Verbindung ist zu klein damit Freenet gut funktioniert. Es sind Probleme zu erwarten.
 Node.useSlashdotCache=Alle Anfragen für 30 Minuten zwischenspeichern?
-Node.useSlashdotCacheLong=Anfragen mit einem hohen HTL sind nicht für die Speicherung im Datenspeicher geeignet. Wird diese Option gesetzt, dann werden diese Anfragen im Zwischenspeicher für kürzliche Anfragen gespeichert, ein spezieller Kurzzeit-Zwischenspeicher. Wird diese Option nicht gesetzt, dann werden nur ULPR-Antworten (Ultra-Lightweight Persistent Requests responses) in diesem Kurzzeit-Zwischenspeicher gespeichert.
+Node.useSlashdotCacheLong=Antworten auf Anfragen mit hohem HTL-Zähler sind nicht geeignet um im Freenet-Datenspeicher abgelegt zu werden. Falls diese Option eingeschaltet ist, wird Ihr Freenet-Knoten diese im Kurzzeit-Cache, auch Slashdot-Cache genannt speichern - der Cache für aktuelle Anfragen. Falls diese Option ausgeschaltet ist, werden nur Antworten für ULPR-Anfragen (Ultra-Lightweight Persistent Requests) in diesem Cache gespeichert werden.
 Node.userDir=Daten-Verzeichnis des Benutzers
 Node.userDirLong=Der Name des Verzeichnisses, in dem Benutzer-Daten gespeichert werden (z.B. Lesezeichen und Download-Listen)
 Node.withAnnouncement=Dem Knoten erlauben sich mit Hilfe von Seednodes automatisch zu verbinden?
@@ -992,7 +993,18 @@ NodeStat.subMaxPingTimeLong=Wenn die durchschnittliche Ping-Zeit (die Zeit zwisc
 NodeStat.threadLimit=Thread-Limit
 NodeStat.threadLimitLong=Der Knoten wird versuchen seinen Thread(Prozess-Strang)-Gebrauch auf den angegebenen Wert zu beschränken, indem er neue Anfragen ablehnt
 NodeStats.allRequests=Alle Anfragen
+NodeStats.blockTransfers=Block Übertragungen
+NodeStats.count=Anzahl
+NodeStats.group=Gruppe
+NodeStats.localCHKs=Lokale CHKs
+NodeStats.localSSKs=Lokale SSKs
 NodeStats.mustBePercentValueNotFull=Dieser Wert muss eine Prozent-Zahl zwischen 0 und 99 sein.
+NodeStats.pSuccess=Erfolgsrate
+NodeStats.remoteCHKs=Nicht-lokale CHKs
+NodeStats.remoteSSKs=Nicht-lokale SSKs
+NodeStats.transfersTimedOut=Zeitlimit überschritten
+NodeStats.turtleRequests=Turtle requests
+NodeStats.turtledDownstream=Turtled downstream
 NodeStats.valueTooLow=Dieser Wert ist zu niedrig für diese Einstellung, erhöhen Sie ihn!
 NodeUpdateManager.enabled=Auf neue Versionen prüfen und herunterladen
 NodeUpdateManager.enabledLong=Soll Ihr Knoten automatisch nach neuen Versionen von Freenet suchen? Wenn ja, werden neue Versionen automatisch erkannt und heruntergeladen, aber nicht unbedingt installiert. Diese Einstellung stellt sich immer wieder auf "nein", es sei denn der Knoten läuft innerhalb des Wrappers (Schutz-/Hilfsumgebung).
@@ -1076,7 +1088,7 @@ PluginJarUpdater.pluginUpdatedShortText=Eine neue Version des ${name} Plugins is
 PluginJarUpdater.pluginUpdatedTitle=Eine neue Version des ${name} Plugins ist verfügbar!
 PluginJarUpdater.updatePlugin=Aktualisiere Plugin nach den abschließenden Sicherheitsüberprüfungen
 PluginManager.alwaysLoadPluginsFromCentralServer=Plugins immer über das Web von unseren Hauptservern laden?
-PluginManager.alwaysLoadPluginsFromCentralServerLong=Wenn diese Option gesetzt ist, dann werden die Plugins immer über das Web heruntergeladen, es wird nicht versucht, sie aus dem Freenet herunterzuladen. Das erfordert eine Verbindung zum Hauptserver über das Web (mit HTTPS), deshalb ist es schlecht für deine Anonymität, aber das Herunterladen dürfte schneller gehen.
+PluginManager.alwaysLoadPluginsFromCentralServerLong=Falls ja wird Ihr Freenet Knoten Plugins immer über das Web herunterladen und nicht versuchen, sie via Freenet zu bekommen. Die Plugins werden von unserem zentralen Web-Server via SSL heruntergeladen, das SSL-Zertifikat wurde mit Ihrem Knoten ausgeliefert. Daher wird die Integrität der Dateien beim Download garantiert sein und der Download wird schneller als über Freenet sein, jedoch ist der Download dann nicht anonym - falls Sie verhindern möchten, dass jemand herausfinden kann, dass Sie Freenet benutzen, schalten Sie diese Option aus.
 PluginManager.cannotSetOnceLoaded=Kann die Plugin(=Erweiterungs)-Liste nicht modifizieren sobald sie geladen wurde
 PluginManager.deleteFailedPluginButton=Beim nächsten Start nicht wieder versuchen
 PluginManager.fallbackFromFreenetLoadToCentralServer=Lade das Plugin vom Hauptserver über das Web, wenn das Herunterladen aus dem Freenet fehlgeschlagen ist?
@@ -1506,7 +1518,12 @@ StartupToadlet.title=Freenet startet gerade
 StaticToadlet.pathInvalidChars=Der angegebene URI enthält nicht erlaubte Zeichen.
 StaticToadlet.pathNotFound=Der Pfad, den Sie angegeben haben, existiert nicht.
 StaticToadlet.pathNotFoundTitle=Pfad nicht gefunden
+StatisticsToadlet.CACHE=Cache
+StatisticsToadlet.CHK=CHK
+StatisticsToadlet.CLIENT=Client cache
 StatisticsToadlet.PUB_KEY=Öffentlicher Schlüssel
+StatisticsToadlet.SLASHDOT=Slashdot cache
+StatisticsToadlet.SSK=SSK
 StatisticsToadlet.STORE=Speicher
 StatisticsToadlet.accessRate=Zugriffsrate
 StatisticsToadlet.ackOnlyBytes=Bestätigungs-Pakete: ${total}
@@ -1517,27 +1534,38 @@ StatisticsToadlet.allocMemory=Zugewiesener Java-Speicher: ${memory}
 StatisticsToadlet.amount=Anzahl
 StatisticsToadlet.announceBytes=Ausgehende Ankündigungen: ${total}
 StatisticsToadlet.authBytes=Verbindungs-Aufbau: ${total} ausgehend
-StatisticsToadlet.avgDist=Durchschnittliche Entfernung
+StatisticsToadlet.avgDist=Durchschn. Entfernung
+StatisticsToadlet.avgLocation=Durchschn. Position
+StatisticsToadlet.avgSuccessLoc=Durchschn. erfolgr. Pos.
 StatisticsToadlet.avgTime=Durchschnittliche Zeit
 StatisticsToadlet.bandwidthTitle=Bandbreite
 StatisticsToadlet.capacity=Kapazität
+StatisticsToadlet.chkCache=Cache (CHK)
+StatisticsToadlet.chkDetailTiming=Detaillierte Zeitmessungen (lokale CHK Anfragen)
 StatisticsToadlet.count=Anzahl
 StatisticsToadlet.cpus=Verfügbare CPUs: ${count}
 StatisticsToadlet.databaseJobsByPriority=Datenbank Aufgaben
+StatisticsToadlet.datasize=Größe der Daten
 StatisticsToadlet.datastore=Datenbank
 StatisticsToadlet.debuggingBytes=Bytes zur Fehlererkennung: ${netColoring} Netzwerk-Färbung, ${ping} Ping, ${probe} Probe Requests, ${routed} weitergeleitete Test-Nachrichten.
 StatisticsToadlet.distanceStats=Entfernungsstatistiken
+StatisticsToadlet.falsePos=Falsch positive
 StatisticsToadlet.fullTitle=Statistiken für ${name}
+StatisticsToadlet.furthestSuccess=Längster Erfolg
 StatisticsToadlet.getLogs=Letzte Log-Datei des Knotens abrufen
+StatisticsToadlet.globalWindow=Globales Fenster
 StatisticsToadlet.inputRate=Eingehend: ${rate}/sec (von ${max}/sec)
 StatisticsToadlet.insertOutput=Insert output (excluding payload): CHK ${chk} SSK ${ssk}.
 StatisticsToadlet.javaVersion=Java-Version: ${version}
+StatisticsToadlet.jobType=Job Typ
 StatisticsToadlet.jvmInfoTitle=JVM-Info
 StatisticsToadlet.jvmName=JVM-Name: ${name}
 StatisticsToadlet.jvmVendor=JVM-Hersteller: ${vendor}
 StatisticsToadlet.jvmVersion=JVM-Version: ${version}
+StatisticsToadlet.keys=Schlüssel
 StatisticsToadlet.maxMemory=Maximaler Java-Speicher: ${memory}
 StatisticsToadlet.maxOpennetPeers=Maximale Anzahl Fremde
+StatisticsToadlet.maxTotalPeers=Max. Partner
 StatisticsToadlet.noRequests=Ihr Knoten bearbeitet gerade keine Anfragen
 StatisticsToadlet.nodeToNodeBytes=Knoten-zu-Knoten-Nachrichten: ${total}
 StatisticsToadlet.offerReplys=Laufende Antworten auf Angebote: ${chk} CHK, ${ssk} SSK.
@@ -1550,6 +1578,9 @@ StatisticsToadlet.outputRate=Ausgehend: ${rate}/sec (von ${max}/sec)
 StatisticsToadlet.payloadOutput=Nutzlast ausgehend: ${total} (${rate}/sec)(${percent}%)
 StatisticsToadlet.peerStatsTitle=Partner-Statistiken
 StatisticsToadlet.priority=Priorität
+StatisticsToadlet.queuedCount=Wartende Anzahl
+StatisticsToadlet.readRequests=Lese-Anfragen
+StatisticsToadlet.realGlobalWindow=Echtes globales Fenster
 StatisticsToadlet.requestOutput=Ausgehende Anfragen (ohne Nutzlast): CHK ${chk} SSK ${ssk}.
 StatisticsToadlet.resendBytes=Nochmal gesendete Bytes: ${total}
 StatisticsToadlet.routingDisabled=Nicht weiterleiten (wir sind zurzeit mit dem Knoten verbunden, aber wir oder er weigern uns (Daten-)Verkehr weiterzuleiten)
@@ -1559,6 +1590,7 @@ StatisticsToadlet.statisticGatheringTitle=Verschiedene Statistiken
 StatisticsToadlet.storeJobsByPriority=Datenbank-Check-Jobs nach Priorität
 StatisticsToadlet.successByHTL=Erfolgsraten mit HTL (downloads)
 StatisticsToadlet.successRate=Erfolgsrate
+StatisticsToadlet.successfulReads=Erfolgreiche Lesezugriffe
 StatisticsToadlet.swapOutput=Swapping Output: ${total}.
 StatisticsToadlet.threadDumpButton=Thread-Dump generieren
 StatisticsToadlet.threads=Laufende Threads: ${running}/${max}
@@ -1573,9 +1605,11 @@ StatisticsToadlet.transferringRequests=Übertrage Anfragen: sende ${senders}, em
 StatisticsToadlet.unaccountedBytes=Andere ausgehende Daten: ${total} (${percent}%)
 StatisticsToadlet.uomBytes=Updater ausgehend: ${total}
 StatisticsToadlet.usedMemory=Benutzter Java-Speicher: ${memory}
+StatisticsToadlet.utilization=Belegung
 StatisticsToadlet.versionTitle=Knoten-Versions-Informationen
 StatisticsToadlet.waiting=Wartend
 StatisticsToadlet.writeRate=Schreibrate
+StatisticsToadlet.writes=Schreibzugriffe
 StatusBar.alerts=Nachrichten:
 StatusBar.connectedPeers=Freenet ist gerade verbunden mit ${X} Freunden und ${Y} Fremden.
 StatusBar.switchToAdvancedMode=Erweiterten Modus benutzen
